# surveyscout

./: .pre-commit-config.yaml  README.md  example_pipeline.ipynb  pyproject.toml  requirements.dev.txt  requirements.txt  requirements_dev.txt
.github/: pull_request_template.md
.github/workflows/: tests.yml
optimization/: utils.py
optimization/flows/: __init__.py  basic_min_distance_flow.py  min_distance_flow.py  min_osrm_distance_flow.py
optimization/tasks/: models.py  postprocessing.py  preprocessing.py
surveyscout/: __init__.py  config.py  utils.py  visualize.py
surveyscout/flows/: __init__.py  haversine_min_distance_flow.py  min_distance_flow.py  routed_min_distance_flow.py
surveyscout/tasks/: models.py  postprocessing.py  preprocessing.py  rank.py  route.py
surveyscout/tasks/compute_cost/: __init__.py  google_distance_matrix.py  haversine.py  osrm.py
tests/: conftest.py  test_utils.py  test_visualize.py
tests/data/: create_assignment_map.py  create_map.py  map.html  map_group_colors.html  test_assignment_data.csv  test_enum_data.csv  test_target_data.csv
tests/test_tasks/: test_compute_cost.py  test_models.py  test_postprocessing.py  test_preprocessing.py  test_rank.py
