[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "surveyscout"
description = "Surveyor-survey target assignment to minimize travel cost"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["optimization", "ortools", "survey operations"]
authors = [
    {name = "IDinsight", email = "dsem@idinsight.org"}
]
dynamic = ["version", "dependencies"]


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "surveyscout.__version__"}


[tool.setuptools.packages.find]
include = ["surveyscout*"]
exclude = ["tests*"]
