[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "surveyscout"
description = "Surveyor-survey target assignment to minimize travel cost"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["optimization", "ortools", "survey operations"]
authors = [
    {name = "IDinsight", email = "dsem@idinsight.org"}
]
dynamic = ["version", "dependencies"]


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "surveyscout.__version__"}


[tool.setuptools.packages.find]
include = ["surveyscout*"]
exclude = ["tests*"]


[tool.ruff]
# Same as Black.
line-length = 88

# Assume Python 3.11
target-version = "py311"

[tool.ruff.format]
# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true
